--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/main.js" defer></script>
-    <title>Document</title>
+    <title>MEJO490-Unity Space Scene</title>
   </head>
   <body>
-    Hello, world!
+    <div class="ratio ratio-16x9">
+      <iframe
+        src="./assets/MEJO490-SpaceRecording.mp4"
+        title="unityrecording"
+        allowfullscreen
+      ></iframe>
+    </div>
   </body>
 </html>
