--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="ratio ratio-16x9">
       <iframe
-        src="./assets/MEJO490-SpaceRecording.mp4"
+        src="./assets/MEJO490-SpaceRecording-w:audio.mp4"
         title="unityrecording"
         allowfullscreen
       ></iframe>
